Unsaved stuff from computer reset
- A random move will now be chosen if the player does not choose in time
- Fixed Contest move opposite types not working
- Removed old stat assesment to use new one
- Should now be able to run ranked contests again (will need to rework it later)
- Contests now correctly accumulate hearts from turns